fix for horizontal scrollbar

--- a/styles/main.css
+++ b/styles/main.css
@@ -27,7 +27,7 @@ main {
     display: flex;
     flex-direction: column;
     height: 100%;
-    width: 100vw;
+    width: 100%;
 }
 
 .overall-result > h2, .your-result > h1 {
@@ -45,7 +45,6 @@ main {
 .overall-result {
     background: linear-gradient(hsl(252, 100%, 67%), hsl(241, 81%, 54%));
     height: 40%;
-    width: 100%;
     border-radius: 0 0 25px 25px;
     display: flex;
     flex-direction: column;
@@ -77,7 +76,6 @@ main {
 
 .result-summary {
     height: 60%;
-    width: 100%;
     display: flex;
     flex-direction: column;
     padding: 2rem;
